solve layout problem in search-result-limit, see #1539

--- a/themes/tuefind/less/overrides.less
+++ b/themes/tuefind/less/overrides.less
@@ -24,6 +24,10 @@ a {
   outline: #eee solid 1px;
 }
 
+.search-result-limit {
+  white-space: nowrap;
+}
+
 #tf-imprint .changed {
     /*
     * color should be set to "inherit" for the end user.
